--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,6 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "element-ui": "^2.4.9",
+    "express-jwt": "^5.3.1",
+    "jsonwebtoken": "^8.4.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
