--- a/service/package.json
+++ b/service/package.json
@@ -4,6 +4,7 @@
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
-    "multer": "^1.4.1"
+    "multer": "^1.4.1",
+    "mysql": "^2.16.0"
   }
 }
