--- a/front-end/package.json
+++ b/front-end/package.json
@@ -13,6 +13,7 @@
     "element-ui": "^2.4.9",
     "express-jwt": "^5.3.1",
     "jsonwebtoken": "^8.4.0",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.5.11",
     "vue-router": "^3.0.1",
     "vuex": "^3.0.1",
