--- a/service/package.json
+++ b/service/package.json
@@ -5,6 +5,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0",
     "multer": "^1.4.1",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "socket.io": "^2.2.0"
   }
 }
